--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -30,6 +31,16 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
+        tbody > tr:nth-child(2n) { /*odd, 2n-1 = casas impares, even, 2n casas pares*/
+            background-color: lightgray;
         }
 
         td.num {
@@ -54,8 +65,8 @@
         <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
 
@@ -172,10 +183,25 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>207.883.699</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum tempora commodi molestiae facilis laborum dolorem quas nesciunt voluptatum. Provident dolore molestias, magnam libero soluta incidunt velit nulla consequatur debitis accusamus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus deserunt labore dolor, amet praesentium consequatur molestias distinctio quo! Neque iure suscipit quidem incidunt obcaecati, repellat dolor nisi ad architecto delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptate consequuntur ut necessitatibus deserunt et dolorum, rem magnam? In, quos? Quasi dolores id nam libero tempore asperiores! Error, perspiciatis nostrum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae voluptatibus ratione voluptas repellendus exercitationem laborum? Ex magni modi, quia similique ad ipsam fuga repudiandae molestiae accusamus accusantium dignissimos voluptatem autem!</p>
 </body>
 </html>
