--- a/exercicios/ex023/tabela003.html
+++ b/exercicios/ex023/tabela003.html
@@ -26,19 +26,24 @@
     <h1>Mesclagem de Células</h1>
     <table>
         <tr>
-            <td>A</td>
-            <td colspan="2">B</td>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
+            <td rowspan="2">C</td>
         </tr>
         <tr>
-            <td rowspan="3">D</td>
+            <td>D</td>
             <td>E</td>
-            <td rowspan="2">F</td>
+            <td>F</td>
         </tr>
         <tr>
+            <td>G</td>
             <td>H</td>
+            <td>I</td>
         </tr>
         <tr>
-            <td colspan="2">M</td>
+            <td>J</td>
+            <td>L</td>
+            <td>M</td>
         </tr>
     </table>
 </body>
