--- a/exercicios/desafios/desafio014/index.html
+++ b/exercicios/desafios/desafio014/index.html
@@ -46,17 +46,17 @@
     <table>
         <tbody>
             <tr>
-                <th rowspan="2">Área</th>
-                <th rowspan="2">Disciplinas</th>
-                <th colspan="2">Notas</th>
-                <th rowspan="2">Média</th>
+                <th rowspan="2" scope="col">Área</th>
+                <th rowspan="2" scope="col">Disciplinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2" scope="col">Média</th>
             </tr>
             <tr>
-                <th>Nota 1</th>
-                <th>Nota 2</th>
+                <th scope="col">Nota 1</th>
+                <th scope="col">Nota 2</th>
             </tr>
             <tr>
-                <th rowspan="4" class="branco">Exatas</th>
+                <th rowspan="4" class="branco" scope="colgroup">Exatas</th>
                 <td>Matemática</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -81,11 +81,11 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="media">Média de Exatas</th>
+                <th colspan="4" class="media" scope="row">Média de Exatas</th>
                 <td class="totm">0.0</td>
             </tr>
             <tr>
-                <th rowspan="2" class="branco">Humanas</th>
+                <th rowspan="2" class="branco" scope="colgroup">Humanas</th>
                 <td>História</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -98,7 +98,7 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="media">Média de Humanas</th>
+                <th colspan="4" class="media" scope="row">Média de Humanas</th>
                 <td class="totm">0.0</td>
             </tr>
         </tbody>
