--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -21,7 +21,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dignissimos pariatur molestias ad sapiente rerum? Magni sit, nam mollitia, temporibus neque ex ad laboriosam consequatur beatae nihil nulla officia magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam porro velit ipsum est facere et blanditiis sed veritatis voluptatum aliquid, asperiores excepturi tenetur odit quia, provident nemo assumenda consectetur soluta?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500">
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
         <p>Infelizmente seu navegador não é compativel com isso</p>
     </iframe>
 
