--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -26,6 +26,10 @@
             <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5" required>
         </p>
         <p>
+            <label for="ihora">Horário da Prova</label>
+            <input type="time" name="hora" id="ihora">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
